<resources>
    <string name="app_name">Transports Rennes</string>
    <string name="widget11_name">Transports Rennes 1x1</string>
    <string name="widget21_name">Transports Rennes 2x1</string>
    <string name="widget22_name">Transports Rennes 2x2</string>
    <string name="premierLancement">Il s\'agit du premier lancement, l\'application a besoin de mettre à jour les
        données, cette opération peut durer
        quelques dizaines de secondes, voulez-vous l\'effectuer maintenant?
    </string>
    <string name="titleInfoAllInMap">Bienvenue dans la carte multi-modale</string>
    <string name="titleTransportsRennes">Bienvenue dans l\'application Transports Rennes</string>
    <string name="infoAllInMap">Le but de cette carte est d\'afficher tous les points d\'intérêts de l\'application sur
        une seule carte. Pour des
        raisons de lisibilité, il n\'est pas possible d\'afficher tout les points, c\'est donc des regroupements qui
        sont affichés. Le nombre affiché
        sur l\'icône est le nombre de points d\'intérêts contenus dans la zone associée. Pour ouvrir le détail
        correspondant à un regroupement, il
        suffit de cliquer deux fois de suite sur l\'icône.
    </string>
    <string name="majDispo">Une mise à jour des données du STAR est disponible, voulez-vous l\'effectuer maintenant?
        Attention, vous devrez charger à
        nouveau les horaires que vous avez déjà chargés.
    </string>
    <string name="infoChargementGtfs">Chargement des données du STAR.</string>
    <string name="verificationUpdate">Recherche de mise à jour.</string>
    <string name="rechercheArrets">Recherche des arrêts de bus.</string>
    <string name="dialogRequeteVeloStar">Interrogation du service LE vélo STAR.</string>
    <string name="dialogRequeteAlerts">Interrogation du STAR.</string>
    <string name="dialogRequeteTwitter">Interrogation de Twitter.</string>
    <string name="dialogRequeteParkRelais">Interrogation du STAR.</string>
    <string name="dialogRequetePointsDeVente">Interrogation du STAR.</string>
    <string name="dialogAPropos">Transports Rennes : application "Rennes Métropole en accès libre", sources des données
        : Data Keolis Rennes (&lt;a
        href=\'http://data.keolis-rennes.com\'&gt;data.keolis-rennes.com&lt;/a&gt;).&lt;br/&gt;Cette application est
        développée et maintenue par une seule personne sur du temps personnel, merci donc de votre indulgence.&lt;br/&gt;N\'hésitez
        pas à m\'envoyer
        toute suggestion ou problème(&lt;a href=\'mailto:ybonnel@gmail.com?subject=Transports Rennes\'&gt;ybonnel@gmail.com&lt;/a&gt;).&lt;br/&gt;
        L\'icône de l\'application a gracieusement été réalisée par Nicolas (&lt;a href=\'http://www.cryptik-web.com\'&gt;www.cryptik-web.com&lt;/a&gt;).&lt;br/&gt;
        Analytics, real-time monitoring and communications provided by Capptain (&lt;a href=\'http://www.capptain.com\'&gt;www.capptain.com&lt;/a&gt;).
    </string>
    <string name="detailarret_empty">Plus de bus aujourd\'hui, vous pouvez voir tous les bus de la journée ou choisir
        une date particulière via le
        menu.
    </string>
    <string name="itineraires_empty">Aucun itinéraire n\'a été trouvé pour ces adresses.</string>
    <string name="hint_rechercherarret">Recherche d\'arrêts</string>
    <string name="listfavori_empty">Aucun favori trouvé.</string>
    <string name="go_googlemap">Visualiser sur GoogleMap</string>
    <string name="textAdresseDepart">Départ</string>
    <string name="textAdresseArrivee">Destination</string>
    <string name="exempleAdresse">Ex : place sainte anne, Rennes</string>
    <string name="hint_rechercheParcRelai">Recherche de Parcs Relais</string>
    <string name="hint_recherchePointDeVente">Recherche de Points de vente</string>
    <string name="hint_rechercheStation">Recherche de stations</string>
    <string name="hint_positionCourante">Position courante</string>
    <string name="listevelofavoris_empty">Aucune station favorite trouvée.</string>
    <string name="directionEntete">Direction :</string>
    <string name="premierAccesLigne">Premier accès à la ligne %1$s, chargement des données.</string>
    <string name="tooMuchFavoris">Déjà trois arrêts favoris sélectionnés</string>
    <string name="justOneFavori">Déjà un arrêt favori sélectionné</string>
    <string name="activeGps">Pour mieux profiter de cette page, il est préférable d\'activer votre GPS.</string>
    <string name="ajouterFavori">Ajouter aux favoris</string>
    <string name="suprimerFavori">Supprimer des favoris</string>
    <string name="favoriUsedByWidget">Un widget utilise ce favori, merci de le supprimer avant de supprimer ce favori.
    </string>
    <string name="chargementLigneFavori">\nChargement de la ligne %1$s dont vous avez des favoris.</string>
    <string name="loadAllLineAlert">Attention, charger les données de toutes les lignes peut prendre plusieurs minutes
        (2 minutes sur un Nexus One),
        et occupera environ 8,5Mo de données, mais vous permettra d\'accéder à tous les horaires de manière instantanée.
        Êtes-vous sûr de vouloir les charger?
    </string>
    <string name="geocodageAdresseDepart">Geo-codage de l\'adresse de départ</string>
    <string name="geocodageAdresseArrivee">Geo-codage de l\'adresse de destination</string>
    <string name="calculItineraire">Calcul des itinéraires possibles en cours.</string>
    <string name="depart">Départ à %1$s</string>
    <string name="arrivee">Arrivée à %1$s</string>
    <string name="btn_velo">LE vélo STAR</string>
    <string name="btn_velo_favori">Stations favorites</string>
    <string name="btn_bus">Bus &amp; Metro</string>
    <string name="btn_bus_favori">Arrêts Favoris</string>
    <string name="btn_bus_gps">Arrêts à proximité</string>
    <string name="btn_alert">Alertes</string>
    <string name="btn_parking">Parcs relais</string>
    <string name="menu_tickets">Points de vente</string>
    <string name="menu_prochainArrets">Prochains horaires</string>
    <string name="menu_allArrets">Tous les horaires</string>
    <string name="menu_selectDay">Choisir une date</string>
    <string name="menu_refresh">Rafraîchir</string>
    <string name="menu_orderByName">Ordre alphabétique</string>
    <string name="menu_orderBySequence">Ordre de la ligne</string>
    <string name="menu_accueil">Accueil</string>
    <string name="menu_apropos">A propos</string>
    <string name="menu_carte">Carte</string>
    <string name="menu_loadLines">Charger toutes les lignes</string>
    <string name="btn_itineraires">Calcul d\'itinéraires</string>
    <string name="widget_choix">Choisissez de un à trois arrêts favoris.</string>
    <string name="widget11_choix">Choisissez un arrêt favori.</string>
    <string name="Terminer">Terminer</string>
    <string name="Toutes">Toutes</string>
    <string name="vers">vers</string>
    <string name="tropTard">Trop tard!</string>
    <string name="dans">dans</string>
    <string name="heures">heures</string>
    <string name="minutes">minutes</string>
    <string name="miniHeures">h</string>
    <string name="miniMinutes">min</string>
    <string name="ferme">Fermé</string>
    <string name="complet">Complet</string>
    <string name="indisponible">Indispo.</string>
    <string name="chooseDirection">Choisissez une direction</string>
    <string name="alertes">Alertes</string>
    <string name="twitter">Twitter</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="prochain">Prochain :</string>
    <string name="erreur_chargementStar">Une erreur est survenue lors de la récupération des données du STAR sûrement
        due à un problème réseau,
        réessayez plus tard.
    </string>
    <string name="erreur_interrogationStar">Une erreur est survenu lors de l\'interrogation du STAR sûrement due à un
        problème réseau, réessayez plus
        tard.
    </string>
    <string name="erreur_interrogationVeloStar">Une erreur est survenu lors de l\'interrogation du service LE vélo STAR
        sûrement due à un problème
        réseau, réessayez plus tard.
    </string>
    <string name="erreur_twitter">Erreur lors de la récupération des messages twitter.</string>
    <string name="erreur_quotaTwitter">Le nombre de demandes à twitter pour votre IP a été dépassée (150/h). Cette
        limitation sera remise à zero le
        %1$s
    </string>
    <string name="erreur_verifUpdate">Erreur lors de la vérification de mise à jour sûrement due à un problème réseau,
        réessayez plus tard.
    </string>
    <string name="erreur_widgetBeforeLaunch">Vous n\'avez pas encore lancé l\'application, veuillez la lancer avant
        d\'essayer d\'ajouter des
        widgets.
    </string>
    <string name="erreur_widgetWithNoFavori">Vous n\'avez pas encore de favori, pour utiliser les widgets, il faut
        ajouter des favoris.
    </string>
    <string name="erreur_auMoinsUnFavori">Sélectionnez au moins un arrêt favori.</string>
    <string name="erreur_geocodage">Une erreur est survenue lors du géo-codage de l\'adresse, veuillez réessayer plus
        tard.
    </string>
    <string name="erreur_geocodage_quota">Une erreur est survenue lors du géo-codage de l\'adresse, le quota est dépassé
        (2500 par jours).
    </string>
    <string name="erreur_pasAdresseDepart">Aucune correspondance n\'a été trouvé pour l\'adresse de départ</string>
    <string name="erreur_pasAdresseArrivee">Aucune correspondance n\'a été trouvé pour l\'adresse de destination
    </string>
    <string name="erreur_gpsPasPret">La position gps n\'a pas encore été trouvée.</string>
    <string name="erreur_calculItineraires">Une erreur est survenue lors du calcul de l\'itinéraire, veuillez réessayer
        plus tard.
    </string>
    <string name="erreur_multipleAdresses">Plusieurs adresses trouvées, veuillez préciser l\'adresse</string>
    <string name="erreur_outOfBounds">L\'itinéraire demandé possède des adresses en déhors de la zone couverte.</string>
    <string name="erreur_noTransitTimes">Aucun bus trouvé pour l\'heure demandée.</string>
    <string name="erreur_pathNotFound">Aucun itinéraire trouvé.</string>
    <string name="nouvelleVersion">Nouvelle version disponible</string>
    <string name="versionDisponible">La version %1$s est disponible!</string>
    <string name="erreurNonPrevue">Une erreur non prévue est arrivée, un rapport d\'erreur a été envoyé au développeur
    </string>
    <string name="erreurReseau">Une erreur de connection a été détectée, veuillez réessayer plus tard.</string>
    <string name="menu_share">Partager</string>
    <string name="shareText">Transports Rennes, l\'application Android pour vous faciliter les Transports Rennais :
        http://goo.gl/ALKs0
    </string>
    <string name="erreurLigneInconue">La ligne %1$s n\'existe plus dans les horaires, merci recharger les données.
    </string>
    <string name="noGoogleMap">GoogleMap non trouvé</string>
    <string name="all">Tous</string>
    <string name="ajouterGroupe">Ajouter un groupe</string>
    <string name="suprimerGroupe">Supprimer le groupe</string>
    <string name="ajouter">Ajouter</string>
    <string name="annuler">Annuler</string>
    <string name="groupeObligatoire">Le nom du groupe est obligatoire</string>
    <string name="groupeExistant">Il existe déjà un groupe avec ce nom</string>
    <string name="deplacerGroupe">Déplacer dans un groupe</string>
    <string name="chooseGroupe">Choisissez un groupe</string>
    <string name="notifUpdateOn">Notification pour les mises à jour</string>
    <string name="preferences">Préférences</string>
    <string name="creerNotif">Créer une alerte.</string>
    <string name="tempsRestant">Notification dans %1$s.</string>
    <string name="notifText">Ligne %1$s, arrêt %2$s arrive dans %3$s minutes</string>
    <string name="notif">Notifications</string>
</resources>