<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@id/menu_a_propos"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_apropos"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@id/menu_notif"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/notif"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@id/menu_load_lines"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_loadLines"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@id/menu_tickets"
        android:icon="@drawable/ic_menu_tickets"
        android:title="@string/menu_tickets"
        android:showAsAction="ifRoom"/>

</menu>