<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_title_search"
        android:showAsAction="always"
        android:title="@string/hint_recherchePointDeVente"/>
    <item
        android:id="@+id/menu_bus_favoris"
        android:icon="@drawable/actionbar_bus_favoris"
        android:showAsAction="always"
        android:title="@string/btn_bus_favori"/>
    <item
        android:id="@+id/menu_velo_favoris"
        android:icon="@drawable/actionbar_velo_favoris"
        android:showAsAction="always"
        android:title="@string/btn_velo_favori"/>
    <item
        android:id="@+id/menu_google_map"
        android:icon="@drawable/ic_title_map"
        android:showAsAction="always"
        android:title="@string/go_googlemap"/>

</menu>