<?xml version="1.0" encoding="utf-8"?>
<!--
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
      ybonnel - initial API and implementation
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <ImageButton
        android:id="@+id/home_btn_bus"
        style="@style/HomeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/home_btn_bus"
        android:contentDescription="@string/btn_bus" />
    <ImageButton
        android:id="@+id/home_btn_bus_favori"
        style="@style/HomeButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/home_btn_bus_favori"
        android:contentDescription="@string/btn_bus_favori" />

    <ImageButton
        android:id="@+id/home_btn_bus_gps"
        style="@style/HomeButton"
        android:layout_below="@id/home_btn_bus"
        android:layout_alignParentLeft="true"
        android:src="@drawable/home_btn_bus_gps"
        android:contentDescription="@string/btn_bus_gps" />

    <ImageButton
        android:id="@+id/home_btn_alert"
        style="@style/HomeButton"
        android:layout_alignParentRight="true"
        android:layout_below="@id/home_btn_bus_favori"
        android:src="@drawable/home_btn_alert"
        android:contentDescription="@string/btn_alert" />
    <ImageButton
        android:id="@+id/home_btn_velo"
        style="@style/HomeButton"
        android:layout_below="@id/home_btn_bus_gps"
        android:layout_alignParentLeft="true"
        android:src="@drawable/home_btn_velo"
        android:contentDescription="@string/btn_velo" />

    <ImageButton
        android:id="@+id/home_btn_velo_favori"
        style="@style/HomeButton"
        android:layout_alignParentRight="true"
        android:layout_below="@id/home_btn_alert"
        android:src="@drawable/home_btn_velo_favori"
        android:contentDescription="@string/btn_velo_favori" />

    <ImageButton
        android:id="@+id/home_btn_parking"
        style="@style/HomeButton"
        android:layout_below="@+id/home_btn_velo"
        android:layout_alignParentLeft="true"
        android:src="@drawable/home_btn_parking"
        android:contentDescription="@string/btn_parking" />

    <ImageButton
        android:id="@+id/home_btn_itineraires"
        style="@style/HomeButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/home_btn_velo_favori"
        android:src="@drawable/home_btn_itineraire"
        android:contentDescription="@string/btn_itineraires" />



</RelativeLayout>
